# python-gtk-boilerplate

./: .gitignore  apps.boilerplate.gschema.xml  boilerplate.desktop  configure.ac  setup.py
boilerplate/: BoilerPlate.py  boilerplate
data/: Makefile.am  org.sampleapp.sampleapp.desktop.in
data/icons/: Makefile.am
src/: Makefile.am  sampleapp.in  sampleapp.py
